# roboticsgroup_upatras_gazebo_plugins

./: CMakeLists.txt  package.xml
include/roboticsgroup_upatras_gazebo_plugins/: mimic_joint_plugin.h
src/: mimic_joint_plugin.cpp
